--- a/index.html
+++ b/index.html
@@ -25,11 +25,31 @@
           <br><br>
           <button class="btn btn-success" id ="start" onclick="start();">Play Game</button>
           <br><br>
-          <h3 class="btn btn-danger" id="status"></h3>
+          <h3 class="btn btn-warning" id="status"></h3>
           <br><br>
           <div id="canvas"></div>
           <div id="Game_console"></div>
+          <button class="btn btn-danger" id="restart-button" onclick="restart();">Restart</button>
      </center>
+
+     <div id="myModal" class="space_fade">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button class="close" data-dismiss="modal">&times;</button>
+           <h4>Instructions</h4>
+            </div>
+  
+            <div class="modal-body">
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="copy_right_footer">
+        Created by Mithra
+      </div>
 
     </body>
 
